Bug fix: fun widget underlying canvas overflows occasionally

--- a/css/common.css
+++ b/css/common.css
@@ -29,16 +29,16 @@ pre {
     display: block;
     width: 64px;
     height: 64px;
-    margin: -2px;
     border-radius: 50%;
     border: 2px solid black;
+    box-sizing: border-box;
 }
 .widget>a>img {
     position: absolute;
     display: block;
     width: 40px;
     height: 40px;
-    margin: 12px;
+    margin: 10px;
 }
 .widget>canvas {
     position: absolute;
